--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "react-app-rewired": "^2.1.1",
     "redux-devtools-extension": "^2.13.8"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://106.13.144.87:8089"
 }
